updating the javascript user validation form:
-using jquery form validation plugin
-updated the category list page 'edit', 'delete' (using jquery)

--- a/OnlineStoreWebsite/WebContent/CSS/style.css
+++ b/OnlineStoreWebsite/WebContent/CSS/style.css
@@ -72,5 +72,12 @@ input{
 	
 }
 .message{
-	
+	font-style: italic;
+	color :blue;
+}
+
+.error{
+	color: red;
+	font-style: italic;
+	margin:5px;
 }
